Fixed weird look when clicking on tab button (due to the border cover being too large and not transitioning background at the same speed as the button background)

--- a/AgencyApp/static/AgencyApp/css/profile.css
+++ b/AgencyApp/static/AgencyApp/css/profile.css
@@ -55,12 +55,13 @@
 	.profileTabButtonInactive
 	{
 		width: 18.1%;
+		height: 20px;
 		min-width: 93px;
 		padding: 10px 15px 10px 15px;
 		display: inline-block;
 		letter-spacing: 0.10em;
 		border: 2px solid #000;
-		border-radius: 4px;
+		border-radius: 3px;
 		text-decoration: none;
 		font-weight: 700;
 		font-size: 1em;
@@ -75,10 +76,11 @@
 		width: 18.1%;
 		min-width: 93px;
 		padding: 10px 15px 15px 15px;
+		height: 20px;
 		display: inline-block;
 		letter-spacing: 0.10em;
 		border: 2px solid #000;
-		border-radius: 4px;
+		border-radius: 3px;
 		text-decoration: none;
 		font-weight: 700;
 		font-size: 1em;
@@ -101,7 +103,7 @@
 		background: #FFF;
 		color: #000;
 		border: 2px solid #000;
-		border-radius: 4px;
+		border-radius: 2px;
 		margin-top: -13px;
 		position: relative;
 		z-index: 2;
@@ -109,14 +111,14 @@
 
 	.profileTabBorderCover
 	{
-		width: 133%;
-		background: #FFF;
-		height: 15px;
-		margin: 0px 0px -15px -15px;
+		width: 132.5%;
+		background: #232323;
+		height: 2px;
+		margin: 7px 0px -15px -15px;
 		position: relative;
 		z-index: 3;
-		display: none;
-		transition: display .4s ease;
+		opacity: 0;
+		transition: background .2s ease;
 	}
 
 	.interestsPanel
